# study-llm-dev-all

./: .gitattributes  .gitignore  CLAUDE.md  README.md  _tmp_term_check.mjs  gen_b01.py  gen_b02.py  gen_course1.py  gen_rest.py  gen_t.py  generate_chapters.py  index.html  run_build.sh
.course-quality/context-memory-engineering/: gate-report.json
.cursor/: sync-version.json
.cursor/commands/: course-fix.md  course-gate.md  course-pipeline.md  course-review.md
.github/workflows/: deploy.yml
courses/: README.md  REFERENCE.md  courses.json  generate_chapters.py  index.html  outline-specs.json
courses/agent-orchestration-engineering/: README.md  course.json  index.html  manifest-advanced.json  manifest-basics.json  manifest-practice.json  (+4 more)
courses/ai-dev-toolchain/demos/practice-01-lab/: README.md  pyproject.toml
courses/ai-dev-toolchain/demos/practice-01-lab/app/: main.py
courses/ai-dev-toolchain/demos/practice-01-lab/app/rag/: router.py  schemas.py  service.py
courses/ai-dev-toolchain/demos/practice-01-lab/tests/: conftest.py
courses/ai-dev-toolchain/demos/practice-01-lab/tests/rag/: test_query.py  test_query_stub.py
courses/python-engineering-for-llm/demos/basics-01-env-tooling-lab/: README.md  pyproject.toml  scaffold_check.py
courses/python-engineering-for-llm/demos/basics-01-env-tooling-lab/src/corpassist/: __init__.py
docs/: llm-java-method.md
scripts/: bootstrap-course-from-spec.mjs  enrich-term-prompts.mjs  ensure-course-progress-files.mjs  fix-course-ref-links.mjs  merge-course-manifests.mjs  prepare-pages.mjs  serve-courses.mjs  sync.mjs
(+2550 files in other folders)
